[build-system]
requires = ["hatchling", "ctgan"]
build-backend = "hatchling.build"

[project]
name = "PCTGAN"
version = "0.0.1"
authors = [
  { name="Frederico Lopes", email="frederico.m.lps@gmail.com" },
]
description = "code for CTGAN, presented in the paper PrivateCTGAN: Adapting GAN for Privacy-aware Tabular Data Sharing"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
